option java_outer_classname = "AccountMessage";

//MSG_ACCOUNT_LOGIN_REQUEST_C2S
message MsgAccountLoginRequest
{
	required string account				= 1; 
	required string password			= 2;
}

//MSG_ACCOUNT_LOGIN_RESPONSE_S2C
message MsgAccountLoginResponse
{
	required bool success				= 1;
	required int32 retcode				= 2;
	required string authid				= 3;
    required int32 currServId           = 4;
}

//MSG_ACCOUNT_REGISTER_REQUEST_C2S
message MsgAccountRegisterRequest
{
	required string account 			= 1;
	required string password			= 2;
}

//MSG_ACCOUNT_REGISTER_RESPONSE_S2C
message MsgAccountRegisterResponse
{
	required bool success				= 1;
	required int32 retcode				= 2;
	required string authid				= 3;
    required int32 currServId           = 4;
}

